se agrego cambio de estilo

--- a/S3_P3/views/404.ejs
+++ b/S3_P3/views/404.ejs
@@ -1,4 +1,6 @@
-
-<h1>404 - Página No Encontrada</h1>
-<p><%= mensaje %></p>
-
+<main class="flex items-center justify-center h-screen bg-gray-100">
+    <div class="text-center">
+        <h1 class="text-4xl font-bold text-red-500 mb-4">404 - Página No Encontrada</h1>
+        <p class="text-lg text-gray-700"><%= mensaje %></p>
+    </div>
+</main>
