--- a/S3_P3/views/partials/footer.ejs
+++ b/S3_P3/views/partials/footer.ejs
@@ -1,4 +1,8 @@
-<hr>
-<footer>
-    <p>&copy; 2024 Superhéroes API. Todos los derechos reservados.</p>
+<hr class="border-t border-gray-300 my-4">
+<footer class="bg-gray-800 text-white p-4">
+    <div class="container mx-auto text-center">
+        <p>&copy; 2024 Superhéroes API.</p>
+        <p>Alumno: De La Fuente Gonzalo</p>
+        <p>Diplomatura En Desarrollo Web Fullstack con JavaScript. Todos los derechos reservados.</p>
+    </div>
 </footer>
