--- a/S3_P3/views/partials/header.ejs
+++ b/S3_P3/views/partials/header.ejs
@@ -1,9 +1,17 @@
-<header>
-    <nav>
-        <ul>
-            <li><a href="/api/index">Inicio</a></li>
-            <li><a href="/api/heroes">Superhéroes</a></li>
+<header class="bg-blue-500 text-white p-4">
+    <nav class="container mx-auto flex justify-between items-center">
+        <div class="text-xl font-bold">Superhéroes API</div>
+        <ul class="flex space-x-4">
+            <li>
+                <a href="/api/index" class="bg-white text-blue-500 px-4 py-2 rounded-full hover:bg-blue-100">Inicio</a>
+            </li>
+            <li>
+                <a href="/api/heroes" class="bg-white text-blue-500 px-4 py-2 rounded-full hover:bg-blue-100">Tabla de super heroes</a>
+            </li>
+            <li>
+                <a href="/api/addSuperhero" class="bg-white text-blue-500 px-4 py-2 rounded-full hover:bg-blue-100">Agregar super heroe</a>
+            </li>
         </ul>
     </nav>
 </header>
-<hr>
+<hr class="border-t border-gray-300 my-4">
