--- a/TF/views/partials/header.ejs
+++ b/TF/views/partials/header.ejs
@@ -13,8 +13,8 @@
                 </a>
             </li>
             <li>
-                <a href="/api/addSuperhero" class="bg-white text-blue-500 px-4 py-2 rounded-full hover:bg-blue-100">
-                    <i class="fas fa-plus mr-2"></i> Agregar super heroe
+                <a href="/api//countries/add" class="bg-white text-blue-500 px-4 py-2 rounded-full hover:bg-blue-100">
+                    <i class="fas fa-plus mr-2"></i> Agregar un nuevo Pais
                 </a>
             </li>
         </ul>
