--- a/TF/views/partials/footer.ejs
+++ b/TF/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<hr class="border-t border-gray-300 my-4">
-<footer class="bg-gray-800 text-white p-4">
+<hr class="border-t border-gray-950 my-4">
+<footer class="bg-black text-white p-4">
     <div class="container mx-auto text-center">
         <p>&copy; 2024 Paises API.</p>
         <p>Alumno: De La Fuente Gonzalo</p>
