--- a/TF/views/editCountry.ejs
+++ b/TF/views/editCountry.ejs
@@ -35,7 +35,7 @@
             <input type="text" id="borders" name="borders" value="<%= pais.borders.join(', ') %>" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
         </div>
         <div class="flex items-center justify-between">
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Guardar Cambios</button>
+            <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Guardar Cambios</button>
         </div>
     </form>
 </main>
