--- a/TF/views/partials/header.ejs
+++ b/TF/views/partials/header.ejs
@@ -1,20 +1,25 @@
-<header class="bg-blue-500 text-white p-4">
+<header class="bg-green-500 text-white p-4">
     <nav class="container mx-auto flex justify-between items-center">
         <div class="text-xl font-bold">Paises API</div>
         <ul class="flex space-x-4">
             <li>
-                <a href="/api/index" class="bg-white text-blue-500 px-4 py-2 rounded-full hover:bg-blue-100">
+                <a href="/api/index" class="bg-white text-green-500 px-4 py-2 rounded-full hover:bg-green-100">
                     <i class="fas fa-home mr-2"></i> Inicio
                 </a>
             </li>
             <li>
-                <a href="/api/countries" class="bg-white text-blue-500 px-4 py-2 rounded-full hover:bg-blue-100">
+                <a href="/api/fetch-countries" class="bg-white text-green-500 px-4 py-2 rounded-full hover:bg-green-100">
+                    <i class="fa-solid fa-flag"></i> Consumir API Paises
+                </a>
+            </li>
+            <li>
+                <a href="/api/countries" class="bg-white text-green-500 px-4 py-2 rounded-full hover:bg-green-100">
                     <i class="fas fa-table mr-2"></i> Tabla de Paises
                 </a>
             </li>
             <li>
-                <a href="/api//countries/add" class="bg-white text-blue-500 px-4 py-2 rounded-full hover:bg-blue-100">
-                    <i class="fas fa-plus mr-2"></i> Agregar un nuevo Pais
+                <a href="/api//countries/add" class="bg-white text-green-500 px-4 py-2 rounded-full hover:bg-green-100">
+                    <i class="fas fa-plus mr-2"></i> Agregar un Nuevo Pais
                 </a>
             </li>
         </ul>
