--- a/TF/views/layout.ejs
+++ b/TF/views/layout.ejs
@@ -44,7 +44,7 @@
             </div>
         <% } %>
         
-        <%- body %> <!-- Renderiza contenido dinámico como HTML -->
+        <%- body %> <!-- Renderizo contenido dinámico como HTML -->
     </main>
 
     <%- include('partials/footer') %> <!-- Footer -->
