--- a/TF/views/addCountry.ejs
+++ b/TF/views/addCountry.ejs
@@ -26,7 +26,7 @@
             </div>
             <div class="mb-4">
                 <label for="gini" class="block text-gray-700 text-sm font-bold mb-2">Índice Gini:</label>
-                <input type="number" id="gini" name="gini" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" min="0">
+                <input type="number" id="gini" name="gini" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" min="0" max="100">
             </div>
             <div class="mb-4">
                 <label for="timezones" class="block text-gray-700 text-sm font-bold mb-2">Zonas Horarias:</label>
